# app-myOng

./: LICENSE  README.md  pyproject.toml
myOng/: manage.py
myOng/myOng/: asgi.py  settings.py  urls.py  views.py  wsgi.py
myOng/socios/: models.py  urls.py  views.py
myOng/socios/migrations/: 0001_initial.py
myOng/socios/templates/socios/: detalle.html
myong_proyect/myong_proyect/: settings.py  urls.py
myong_proyect/socios/: api_views.py  dni_utils.py  models.py  serializers.py  urls_api.py
myong_proyect/socios/migrations/: 0005_socio_dni.py  0006_remove_socio_dni.py
