[tool.poetry]
name = "myong"
version = "0.1.0"
description = "App para una ONG en la asignatura DWES"
authors = ["Alexander Alcázar <aalcazarprogramacion@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
